--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/css-modules": "^1.0.5",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.5",
@@ -31,6 +34,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "globals": "^15.9.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
